--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 </head>
 <body>
     <h1>Odin Recipes</h1>
-    <a href="recipes/lasagna.html">Lasagna</a>
+    <p><a href="recipes/lasagna.html">Lasagna</a></p>
+    <p><a href="recipes/goulash.html">Goulash</a></p>
 </body>
 </html>
