Fix link to penne.html

--- a/index.html
+++ b/index.html
@@ -9,6 +9,6 @@
     <h1>Odin Recipes</h1>
     <p><a href="recipes/lasagna.html">Lasagna</a></p>
     <p><a href="recipes/goulash.html">Goulash</a></p>
-    <p><a href="recipes/penne.html"></a></p>
+    <p><a href="recipes/penne.html">Penne</a></p>
 </body>
 </html>
