--- a/index.html
+++ b/index.html
@@ -7,8 +7,10 @@
 </head>
 <body>
     <h1>Odin Recipes</h1>
-    <p><a href="recipes/lasagna.html">Lasagna</a></p>
-    <p><a href="recipes/goulash.html">Goulash</a></p>
-    <p><a href="recipes/penne.html">Penne</a></p>
+    <ul>
+        <li><a href="recipes/lasagna.html">Lasagna</a></li>
+        <li><a href="recipes/goulash.html">Goulash</a></li>
+        <li><a href="recipes/penne.html">Penne</a></li>
+    </ul>
 </body>
 </html>
